# hplot

./: .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  pyproject.toml  run_hplot.py  setup.py
hplot/: __init__.py  __main__.py  cli.py  core.py  plotting.py  runners.py  stats.py
hplot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: hplot_demo.ipynb
test/: test_stats.py
